=== 1.9.14 ===
2007-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile:
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:
	Release 1.9.14

2007-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml: Re-enable the ObjectList

2006-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml:
	* glade3-plugin/setup.py:
	Add Glade-3 plugin based on patch by Ali, fixes #3239

	* kiwi/dist.py:
	Do not require a name parameter to be passed in.

2007-03-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/controllers.py (BaseController.on_key_press): gdk.keyval_name
	returns None if there is no name for the key, avoid raising an
	exception in that case, just silently ignore it.

2007-03-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Set the __gtype_name__ on Column and ObjectTree

2007-03-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column): Mention the supported data types 
	in the doc string.

2007-03-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/listdialog.py (ListContainer): Add a return value
	to edit-item, inverse bool for remove-item.

	* examples/listdialog.py: New example

	* kiwi/ui/listdialog.py (ListDialog, ListContainer): 
	New dialog to implement 

	* kiwi/enums.py (ListType): new enum

	* kiwi/utils.py (quote): new function

2007-03-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (ComboEntry.set_active_iter): 
	If object is None do not set the text of the entry

2007-02-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.__setitem__):
	Update the cache when replacing an object
	(ObjectList.__contains__): Use iters cache for consitency
	with index() and speed.

2007-02-22  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (ext_modules): Make sure that the pkgconfig file for
	pygtk-2.0 is installed before checking which version we have.
